--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ android {
 
 dependencies {
 
+    implementation 'androidx.fragment:fragment-ktx:1.3.0'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
 
