--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.jetpackcomposetutorial">
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:name=".BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JetpackComposeTutorial">
         <activity
-            android:name="com.example.jetpackcomposetutorial.ui.activity.MainActivity"
+            android:name="com.example.jetpackcomposetutorial.ui.activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
