--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdkVersion 31
 
     defaultConfig {
-        applicationId "com.codingwithmitch.mvvmrecipeapp"
+        applicationId "com.example.jetpackcomposetutorial"
         minSdkVersion 21
         targetSdkVersion 31
         versionCode 1
